<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_button"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center"
        android:layout_weight="1" >

        <Button
            android:id="@+id/drawer_button1"
            android:gravity="center"
            android:text="@string/drawer_button1"
            android:layout_width="match_parent"
            android:layout_height="50dip"

            android:layout_weight="1"
            android:textColor="#ffffffff"
            android:background="#ba848484"/>

        <Button
            android:id="@+id/drawer_button2"
            android:gravity="center"
            android:text="@string/drawer_button2"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:textColor="#ffffffff"
            android:background="#ba848484"/>

        <Button
            android:id="@+id/drawer_button3"
            android:gravity="center"
            android:text="@string/drawer_button3"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:textColor="#ffffffff"
            android:background="#ba848484"
            android:focusableInTouchMode="true"
            android:theme="@android:style/ButtonBar" />

        <Button
            android:id="@+id/drawer_button4"
            android:gravity="center"
            android:text="@string/drawer_button4"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:textColor="#ffffffff"
            android:background="#ba848484"/>

</LinearLayout>